--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.8)
-project(nvblox_ros2)
+cmake_minimum_required(VERSION 3.18)
+project(nvblox_ros2 LANGUAGES CXX CUDA)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -9,7 +9,6 @@ find_package(visualization_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(message_filters REQUIRED)
-find_package(CUDA REQUIRED)
 find_package(Eigen3 REQUIRED)
 
 add_subdirectory(src/nvblox)
@@ -21,7 +20,6 @@ target_include_directories(nvblox_ros2_node PUBLIC
   $<INSTALL_INTERFACE:include>)
 target_link_libraries(nvblox_ros2_node
   nvblox_lib
-  ${CUDA_LIBRARIES}
   Eigen3::Eigen)
 ament_target_dependencies(nvblox_ros2_node
   rclcpp sensor_msgs geometry_msgs visualization_msgs nav_msgs tf2_ros message_filters)
